# ff11sim

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
data/: equipment_slots.json  grade_coefficients.json  job_categories.json  job_gifts.json  job_merit_categories.json  job_skill_ranks.json  job_status_grades.json  jobs.json  race_status_grades.json  races.json  skill_cap_control_points.json  skills.json
docs/knowledge/status/: accuracy.md  attack.md  base_stats.md  defense.md  evasion.md  magic_attack.md  magic_defense.md
rust/: Cargo.toml
rust/src/: chara.rs  character_profile.rs  data_loader.rs  gift.rs  job.rs  job_points.rs  lib.rs  race.rs  skills.rs  status.rs  wasm.rs
scripts/: parse_lua_to_json.py  scrape_augments.py
supabase/: schema.sql
supabase/migrations/: 001_equipsets_position.sql  002_shared_equipsets.sql
web/: README.md  index.html  search.html
web/data/: augments.json  equipment_slots.json  job_categories.json  job_merit_categories.json  jobs.json  races.json  skills.json
web/js/: auth-ui.js  config.example.js  constants.js  equip-stats.js  item-search.js  share.js  status-display.js  storage.js  supabase-client.js  sync.js  utils.js
web/js/repositories/: character-repo.js  equipset-repo.js
web/test/: equip-stats-extraction.test.js  skillchain-bonus.test.js  ws-damage-sam-elemental.test.js
